# ocaml-sysctl

./: .cirrus.yml  README.md  dune-project  sysctl.opam
lib/: dune  sysctl.c  sysctl.ml  sysctl.mli
test/: dune  test_sysctl.ml
